3.Docker-Kubernetes/RailsApp-With-PostgreSQL-On-Kubernetes/kubernetes-manifests/namespace.yml
#  Namespace definition for Ruby on Rails application
apiVersion: v1
kind: Namespace
metadata:
  name: ruby-rails
