3.Docker-Kubernetes/RailsApp-With-PostgreSQL-On-Kubernetes/kubernetes-manifests/postgres-statefullset.yml
#  Service definition for PostgreSQL
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: ruby-rails  # Specify the namespace here
spec:
  selector:
    app: postgres
  ports:
  - protocol: TCP
    port: 5432            # Exposes port 5432 on the service
    targetPort: 5432      # Forwards traffic to port 5432 on the pods

---
# StatefulSet definition for PostgreSQL
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: ruby-rails  # Specify the namespace here
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:11.5
        ports:
        - containerPort: 5432    # Listens on port 5432 inside the container
          name: postgres
        volumeMounts:
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
